<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_color">ColorActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Close</string>

    <!-- Dialer activity -->
    <string-array name="dialer_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>*</item>
        <item>0</item>
        <item>#</item>
    </string-array>

    <string name="title_activity_elevation_sample">ElevationSampleActivity</string>
    <string name="mod1.1"></string>
    <string name="mod1">Module I</string>
    <string name="mod2">Module II</string>
    <string name="mod3">Module III</string>
    <string name="mod4">Module IV</string>
    <string name="mod5">Module V</string>
    <string name="mod6">Module VI</string>
    <string name="pick_color">Module VI</string>


</resources>
