<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    >
    <Button
        android:id="@+id/fab_button"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:text="INFO"
        android:layout_marginTop="-26dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/activity_transition_header"
        android:layout_alignParentEnd="true"
        android:elevation="5dp"
        android:background="@drawable/ripple_round"
        android:textColor="#ffffffff" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_transition_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?android:colorPrimary"
        android:transitionName="holder1"
        android:minHeight="?attr/actionBarSize"/>

    <LinearLayout
        android:id="@+id/row_container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_transition_header"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:text="@string/mod1"
            android:textSize="20dp"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tm11"
            android:text="@string/mod1.1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm12"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod2"
            android:id="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/row_container2"
            android:textSize="20dp"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm22"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm23" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod3"
            android:id="@+id/textView9"
            android:textSize="20dp"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm31" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm32"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm33" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod4"
            android:id="@+id/textView10"
            android:textSize="20dp"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm41" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm42"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm43" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod5"
            android:id="@+id/textView11"
            android:textSize="20dp"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm51" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm52"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm53" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod6"
            android:id="@+id/textView12"
            android:textSize="20dp"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm61" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm62"
            android:textColor="#3F51B5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tm63" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" />

    </LinearLayout>


</RelativeLayout>
</ScrollView>
